# mipaquete

./: README.md  pyproject.toml
.github/workflows/: build.yml
docs/source/: conf.py  index.rst
mipaquete/: math.py  string.py
tests/: test_math.py  test_mipaquete.py  test_string.py
