[tool.poetry]
name = "mipaquete"
version = "0.1.3"
description = "Este es un paquete de ejemplo con algunas funcionalidades simples, orientado al estudio del funcionamiento de paquetes en python"
authors = ["Alejandro Medina <aresempai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6"
Sphinx = "^5.3.0"
autoapi = "^2.0.1"
sphinx-autoapi = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"